--- a/market.html
+++ b/market.html
@@ -27,6 +27,11 @@
                         <br>
                         <a class="appname" href="games/platformer/platformer.html">Platformer</a>
                     </div>
+                    <div class="product">
+                        <img src="assets/img/icon.png" alt="Иконка">
+                        <br>
+                        <a class="appname" href="games/angryZNeo/zneo.html">AngryZNeo</a>
+                    </div>
                 </div>
             </div>
         </div>
